--- a/ShowcaseSite/Views/Home/Profile.cshtml
+++ b/ShowcaseSite/Views/Home/Profile.cshtml
@@ -45,5 +45,38 @@
                     </div>
                 </div>
             </div>
+
+            
+            </div>
+
+        <div class="col-7">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col">
+                            <center>
+                                <h4>Your posts</h4>
+                            </center>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <center>
+                                
+                            </center>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <hr>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
+    
     </div>
+</div>
